Display json data

--- a/templates/about.html
+++ b/templates/about.html
@@ -1,8 +1,15 @@
 {% extends "base.html" %}
 {% block content %}
-{% for number in n_s %}
-<p>{{ number }}</p>
-{% endfor %}
+
+{{ company[0]["name"] }}
+<br>
+{{ company[1]["name"]  }}
+<br>
+{{ company[2]["name"]  }}
+<br>
+{{ company[3]["name"]  }}
+
+
 <h2> {{ page_title }}</h2>
 <p>
     The formation of the group grew out of a meeting Gandalf had with Thorin in Bree which kindled Thorin's interest in
